--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="humidity_icon">Humidity icon</string>
     <string name="min_max_temperature">%1$s°/%2$s°</string>
     <string name="temperature">%1$s°</string>
+    <string name="humidity">%1$s\%%</string>
+    <string name="wind_speed">%1$sk/h</string>
 </resources>
