--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="places_api_key">AIzaSyA8e_yXZWcKJQENOjbVERHi9Yw5vgu3bsg</string>
     <string name="weather_access_id">WYw6I6BXtRZ6FoolWOcbk</string>
     <string name="weather_secret_key">Frab59acfa8ANWYQ3TDY5BfWo9K2iEsHP7n5d16L</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
